@@ -54,7 +54,7 @@ public class Log4shellUpdate {
 
   static boolean IS_WINDOWS = '\\' == File.separatorChar;
 
-  private static final Pattern VERSION_PATTERN = Pattern.compile("-2\\.(\\d+)\\.\\d+\\.jar(\\.bak_log4shell)*");
+  private static final Pattern VERSION_PATTERN = Pattern.compile("-2\\.(?<minor>\\d+)\\.(?<patch>\\d+)\\.jar(\\.bak_log4shell)*");
   private static final Pattern DELETE_PATTERN = Pattern.compile("elasticsearch-sql-cli-\\d+\\.\\d+\\.\\d+\\.jar");
   private static final Pattern LOG4J1_PATTERN = Pattern.compile("log4j-1.2.\\d+\\.jar");
   private static final Map<String, String> REPLACEMENTS;
@@ -78,12 +78,12 @@ public class Log4shellUpdate {
 
   static {
     REPLACEMENTS = new HashMap<>();
-    REPLACEMENTS.put("log4j-1.2-api-", "log4j-1.2-api-2.17.0.jar");
-    REPLACEMENTS.put("log4j-api-", "log4j-api-2.17.0.jar");
-    REPLACEMENTS.put("log4j-core-", "log4j-core-2.17.0.jar");
-    REPLACEMENTS.put("log4j-jcl-", "log4j-jcl-2.17.0.jar");
-    REPLACEMENTS.put("log4j-layout-template-json-", "log4j-layout-template-json-2.17.0.jar");
-    REPLACEMENTS.put("log4j-slf4j-impl-", "log4j-slf4j-impl-2.17.0.jar");
+    REPLACEMENTS.put("log4j-1.2-api-", "log4j-1.2-api-2.17.1.jar");
+    REPLACEMENTS.put("log4j-api-", "log4j-api-2.17.1.jar");
+    REPLACEMENTS.put("log4j-core-", "log4j-core-2.17.1.jar");
+    REPLACEMENTS.put("log4j-jcl-", "log4j-jcl-2.17.1.jar");
+    REPLACEMENTS.put("log4j-layout-template-json-", "log4j-layout-template-json-2.17.1.jar");
+    REPLACEMENTS.put("log4j-slf4j-impl-", "log4j-slf4j-impl-2.17.1.jar");
 
     try {
       ZIP_NAMES_FIELD = ZipOutputStream.class.getDeclaredField("names");
@@ -147,7 +147,7 @@ public class Log4shellUpdate {
     options.addOption("d", "dry-run", false, "only print replacements, do not replace files");
     options.addOption("h", "help", false, "print this help");
     options.addOption("b", "delete-backups", false, "delete backups automatically");
-    options.addOption("a", "allow-duplicates", false, "allow duplicate entries in zip files (will use reflection)");
+    options.addOption("a", "allow-duplicates", false, "allow duplicate entries in zip files\n----\nwill use reflection\nyou might need to add\n--add-opens java.base/java.util.zip=ALL-UNNAMED");
     options.addOption("l1", "replace-log4j1", false, "replace log4j1 with current log4j2 libraries (please contact Intrafind support beforehand)");
     CommandLineParser parser = new DefaultParser();
 
@@ -174,7 +174,9 @@ public class Log4shellUpdate {
       } else {
         final Matcher matcher = VERSION_PATTERN.matcher(filename);
         if (matcher.find()) {
-          if (Integer.parseInt(matcher.group(1)) < 17) {
+          final int minorVersion = Integer.parseInt(matcher.group("minor"));
+          final int patchVersion = Integer.parseInt(matcher.group("patch"));
+          if (minorVersion < 17 || (minorVersion == 17 && patchVersion < 1)) {
             REPLACEMENTS.entrySet().stream()
                 .filter(entry -> filename.startsWith(entry.getKey()))
                 .map(Map.Entry::getValue)
@@ -214,7 +216,7 @@ public class Log4shellUpdate {
         modify.add(path);
         return;
       } else if (slf4jImpls.length == 1) {
-        toReplace.put(basePath.resolve("lib").resolve(slf4jImpls[0]), "log4j-slf4j-impl-2.17.0.jar");
+        toReplace.put(basePath.resolve("lib").resolve(slf4jImpls[0]), "log4j-slf4j-impl-2.17.1.jar");
       }
       if (isIntrafindService(path)) {
         toDelete.add(basePath.resolve("log4j.properties"));
@@ -267,9 +269,9 @@ public class Log4shellUpdate {
         return;
       }
       toDelete.add(path);
-      toAdd.put(basePath.resolve("lib/log4j-1.2-api-2.17.0.jar"), "log4j-1.2-api-2.17.0.jar");
-      toAdd.put(basePath.resolve("lib/log4j-api-2.17.0.jar"), "log4j-api-2.17.0.jar");
-      toAdd.put(basePath.resolve("lib/log4j-core-2.17.0.jar"), "log4j-core-2.17.0.jar");
+      toAdd.put(basePath.resolve("lib/log4j-1.2-api-2.17.1.jar"), "log4j-1.2-api-2.17.1.jar");
+      toAdd.put(basePath.resolve("lib/log4j-api-2.17.1.jar"), "log4j-api-2.17.1.jar");
+      toAdd.put(basePath.resolve("lib/log4j-core-2.17.1.jar"), "log4j-core-2.17.1.jar");
     }
   }
 
